v5.56
  * ditch attempted 'luarocks' support
  * set STREAM->Size for http streams from Content-Length


v5.55 (2025-05-28)
  * use 'listen' on all server sockets. We've been getting away without it all these years.
  * honor both 'TodayAttribs' and any 'StateAttribs' for a day in TerminalCalendar, so current day is always highlighted
  * ListStats now stores 'AccessTime' if LIST_FLAG_TIMEOUT is not set
  * ListSetMaxItems function added
  * ListSetDestroyer function added
  * ContainersApplyConfig now automatically switches to a 'user namespace' is current uid is not 0 (user is not root)
  * ProcessApplyConfig 'security=nonet' now uses namespaces in addition to seccomp in order to limit network acccess
  * externalize StrLenCacheInit function
  

v5.54 (2025-05-13)
  * better debugging/error display for OpenSSL operations
  * add more '--enable-harden' compiler flags

v5.53 (2025-05-12)
  * fix 'GetCertificateValue' function that's preventing compilation without openssl
  * do not include 'bind' in 'server functions' in seccomp: binding to port 0 is needed in client mode and seccomp cannot see into a sockaddr object
  * ongoing saga of MacOS support continues

v5.52 (2025-05-11)
  * Yet more work on MacOS compilation
  * More work on seccomp, new seccomp 'levels' and 'modifiers' added
  * added StringListToUnique function

v5.51 (2025-05-03)
  * Support 'inner text' within terminal progress bars
  * Add more compiler-hardening options for ./configure --enable-harden 
  * Make sure non-lgpl licensed parts are not compiled in, rather than just not called, if compiled with --enable-lgpl
  * More changes from barracuda156@github.com for compiling on MacOS

v5.50 (2025-04-12)
  * Add TerminalCalendarSetDateStrState
  * Add strcount

v5.49 (2025-04-11)
  * Fix issue with List/Map overlooking first item in list
  * Added support to ProcessApplyConfig for "W^X" "memory deny write execute" using prctl on linux
  * Added StripStartEndChars function in String.c
