@@ -12,9 +12,9 @@ ListNode *ListGetRoot(ListNode *Node)
     ListNode *Head;
 
     Head=ListGetHead(Node);
-		if (Head->Flags & LIST_FLAG_MAP_CHAIN) Head=Head->Head;
+    if (Head->Flags & LIST_FLAG_MAP_CHAIN) Head=Head->Head;
 
-		return(Head);
+    return(Head);
 }
 
 unsigned long ListSize(ListNode *Node)
@@ -110,7 +110,7 @@ void ListSetDestroyer(ListNode *List, LIST_ITEM_DESTROY_FUNC Destroyer)
 
     Head=ListGetRoot(List);
     if (! Head->Stats) Head->Stats=(ListStats *) calloc(1,sizeof(ListStats));
-		Head->Stats->Destroyer=Destroyer;
+    Head->Stats->Destroyer=Destroyer;
 }
 
 
@@ -121,7 +121,7 @@ void ListSetMaxItems(ListNode *List, unsigned long val, LIST_ITEM_DESTROY_FUNC D
     Head=ListGetRoot(List);
     if (! Head->Stats) Head->Stats=(ListStats *) calloc(1,sizeof(ListStats));
     Head->Stats->Max=val;
-		Head->Stats->Destroyer=Destroyer;
+    Head->Stats->Destroyer=Destroyer;
 }
 
 
@@ -203,12 +203,12 @@ unsigned long ListIncrNoOfItems(ListNode *List)
 {
     ListNode *Head;
 
-		//get the head of the list, if we've been passed a map chain
-		//then it's the 'Head' at this stage, otherwise get List->Head
-		Head=ListGetHead(List);
+    //get the head of the list, if we've been passed a map chain
+    //then it's the 'Head' at this stage, otherwise get List->Head
+    Head=ListGetHead(List);
 
-		//if the Head is the head of a map chain, then we need to update
-		//it's count, but we also need to update the count for the whole map
+    //if the Head is the head of a map chain, then we need to update
+    //it's count, but we also need to update the count for the whole map
     if (Head->Flags & LIST_FLAG_MAP_CHAIN)
     {
         Head->Stats->Hits++;
@@ -217,7 +217,7 @@ unsigned long ListIncrNoOfItems(ListNode *List)
         Head=Head->Head;
     }
 
-		//okay, for plain lists, and map heads, update Hits
+    //okay, for plain lists, and map heads, update Hits
     Head->Stats->Hits++;
 
     return(Head->Stats->Hits);
@@ -229,9 +229,9 @@ unsigned long ListDecrNoOfItems(ListNode *List)
 {
     ListNode *Head;
 
-		//get the head of the list, if we've been passed a map chain
-		//then it's the 'Head' at this stage, otherwise get List->Head
-		Head=ListGetHead(List);
+    //get the head of the list, if we've been passed a map chain
+    //then it's the 'Head' at this stage, otherwise get List->Head
+    Head=ListGetHead(List);
 
     if (Head->Flags & LIST_FLAG_MAP_CHAIN)
     {
@@ -240,7 +240,7 @@ unsigned long ListDecrNoOfItems(ListNode *List)
         Head=Head->Head;
     }
 
-		//okay, for plain lists, and map heads, update Hits
+    //okay, for plain lists, and map heads, update Hits
     Head->Stats->Hits--;
 
     return(Head->Stats->Hits);
@@ -386,36 +386,36 @@ ListNode *ListClone(ListNode *ListStart, LIST_ITEM_CLONE_FUNC ItemCloner)
 //this function handled the 'maximum items in list' feature
 static void ListHandleMaxSize(ListNode *Node, ListNode *Head)
 {
-ListNode *ChainHead, *Curr;
-int i;
+    ListNode *ChainHead, *Curr;
+    int i;
 
-			//In maps ChainHead will be the head of the current subchain in the map
-			//in lists it will be the same as 'Head'
-			ChainHead=ListGetHead(Node);
+    //In maps ChainHead will be the head of the current subchain in the map
+    //in lists it will be the same as 'Head'
+    ChainHead=ListGetHead(Node);
 
-			//we delete up to 3 items, as we're only adding 1, then even if somehow the
-			//list has grown over 'Max' it will gradually shrink back
-			for (i=0; (i < 3) && (ChainHead->Stats->Hits > Head->Stats->Max); i++)
-			{
-				Curr=ListGetNext(ChainHead);
-				if (! Curr) break;
+    //we delete up to 3 items, as we're only adding 1, then even if somehow the
+    //list has grown over 'Max' it will gradually shrink back
+    for (i=0; (i < 3) && (ChainHead->Stats->Hits > Head->Stats->Max); i++)
+    {
+        Curr=ListGetNext(ChainHead);
+        if (! Curr) break;
 
-				if (Head->Stats->Destroyer) Head->Stats->Destroyer(Curr->Item);
-				ListDeleteNode(Curr);
-			}
+        if (Head->Stats->Destroyer) Head->Stats->Destroyer(Curr->Item);
+        ListDeleteNode(Curr);
+    }
 }
 
 
 ListNode *ListInsertTypedItem(ListNode *InsertNode, uint16_t Type, const char *Name, void *Item)
 {
     ListNode *NewNode, *Head, *Curr;
-		int i;
+    int i;
 
     if (! InsertNode) return(NULL);
-	
-		Head=ListGetRoot(InsertNode);
 
-		if (Head->Stats->Max > 0) ListHandleMaxSize(InsertNode, Head);
+    Head=ListGetRoot(InsertNode);
+
+    if (Head->Stats->Max > 0) ListHandleMaxSize(InsertNode, Head);
 
     NewNode=(ListNode *) calloc(1,sizeof(ListNode));
     ListThreadNode(InsertNode, NewNode);
@@ -428,9 +428,9 @@ ListNode *ListInsertTypedItem(ListNode *InsertNode, uint16_t Type, const char *N
         NewNode->Stats=(ListStats *) calloc(1,sizeof(ListStats));
 
 
-				//If list is being used with LIST_FLAG_TIMEOUT then user will
-				//call 'ListSetTime' after inserting the item, and overwrite
-				//this time val, so it does no harm to set it here.
+        //If list is being used with LIST_FLAG_TIMEOUT then user will
+        //call 'ListSetTime' after inserting the item, and overwrite
+        //this time val, so it does no harm to set it here.
         NewNode->Stats->Time=GetTime(TIME_CACHED);
     }
 
@@ -534,7 +534,7 @@ ListNode *ListFindNamedItemInsert(ListNode *Root, const char *Name)
                 val=ListNodeGetTime(Curr);
                 if ((val > 0) && (val < GetTime(TIME_CACHED)))
                 {
-										if (Root->Stats && Root->Stats->Destroyer) Root->Stats->Destroyer(Curr->Item);
+                    if (Root->Stats && Root->Stats->Destroyer) Root->Stats->Destroyer(Curr->Item);
                     ListDeleteNode(Curr);
                 }
             }
@@ -589,14 +589,14 @@ ListNode *ListFindTypedItem(ListNode *Root, int Type, const char *Name)
                 if  ( (Type==LIST_ITEM_ANYTYPE) || (Type==Node->ItemType) )
                 {
                     if (Head->Flags & LIST_FLAG_CACHE) Head->Side=Node;
-                    if (Node->Stats) 
-										{
-											Node->Stats->Hits++;
+                    if (Node->Stats)
+                    {
+                        Node->Stats->Hits++;
 
-											//if this list is being used with LIST_FLAG_TIMEOUT then the Time field in ListStats
-											//will be an expiry time, so we can't update it with a 'last accessed' time
-											if (! (Head->Flags & LIST_FLAG_TIMEOUT)) Node->Stats->Time=GetTime(TIME_CACHED);
-										}
+                        //if this list is being used with LIST_FLAG_TIMEOUT then the Time field in ListStats
+                        //will be an expiry time, so we can't update it with a 'last accessed' time
+                        if (! (Head->Flags & LIST_FLAG_TIMEOUT)) Node->Stats->Time=GetTime(TIME_CACHED);
+                    }
 
                     if (
                         (Node != Head) &&
