@@ -62,26 +62,26 @@ int BASIC_FUNC_EXEC_COMMAND(void *Command, int Flags)
         ptr=FinalCommand;
         ptr=GetToken(FinalCommand,"\\S",&Token,GETTOKEN_QUOTES);
         ExecPath=FindFileInPath(ExecPath,Token,getenv("PATH"));
-				if (StrValid(ExecPath))
-				{
-        i=0;
-
-        if (! (Flags & SPAWN_ARG0))
+        if (StrValid(ExecPath))
         {
-            argv[0]=CopyStr(argv[0],ExecPath);
-            i=1;
-        }
+            i=0;
 
-        for (; i < max_arg; i++)
-        {
-            ptr=GetToken(ptr, "\\S", &Token, GETTOKEN_QUOTES);
-            if (! ptr) break;
-            argv[i]=CopyStr(argv[i], Token);
-        }
+            if (! (Flags & SPAWN_ARG0))
+            {
+                argv[0]=CopyStr(argv[0],ExecPath);
+                i=1;
+            }
 
-        result=execv(ExecPath, argv);
-				}
-    		else RaiseError(ERRFLAG_ERRNO, "Spawn", "Failed to execute '%s', can't find executable",Command);
+            for (; i < max_arg; i++)
+            {
+                ptr=GetToken(ptr, "\\S", &Token, GETTOKEN_QUOTES);
+                if (! ptr) break;
+                argv[i]=CopyStr(argv[i], Token);
+            }
+
+            result=execv(ExecPath, argv);
+        }
+        else RaiseError(ERRFLAG_ERRNO, "Spawn", "Failed to execute '%s', can't find executable",Command);
     }
     else result=execl("/bin/sh","/bin/sh","-c",(char *) Command,NULL);
 
