@@ -1,4 +1,4 @@
-AC_INIT([libUseful], [5.55], [colums.projects@gmail.com])
+AC_INIT([libUseful], [5.56], [colums.projects@gmail.com])
 
 
 dnl define a function we can use to check if a compiler flag
